src/bootstrap/src/core/builder/cli_paths/snapshots/x_bench.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: bench
---
[Bench] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({bench::library/alloc})
    - Set({bench::library/alloctests})
    - Set({bench::library/compiler-builtins/compiler-builtins})
    - Set({bench::library/core})
    - Set({bench::library/coretests})
    - Set({bench::library/panic_abort})
    - Set({bench::library/panic_unwind})
    - Set({bench::library/proc_macro})
    - Set({bench::library/c-std-workspace-core})
    - Set({bench::library/std})
    - Set({bench::library/std_detect})
    - Set({bench::library/sysroot})
    - Set({bench::library/test})
    - Set({bench::library/unwind})
[Bench] test::CrateLibc
    targets: [x86_64-unknown-linux-gnu]
    - Set({bench::compiler})
    - Set({bench::compiler/c})
    - Set({bench::compiler/c_abi})
    - Set({bench::compiler/c_arena})
    - Set({bench::compiler/c_ast})
    - Set({bench::compiler/c_ast_ir})
    - Set({bench::compiler/c_ast_lowering})
    - Set({bench::compiler/c_ast_passes})
    - Set({bench::compiler/c_ast_pretty})
    - Set({bench::compiler/c_attr_parsing})
    - Set({bench::compiler/c_baked_icu_data})
    - Set({bench::compiler/c_borrowck})
    - Set({bench::compiler/c_builtin_macros})
    - Set({bench::compiler/c_codegen_llvm})
    - Set({bench::compiler/c_codegen_ssa})
    - Set({bench::compiler/c_const_eval})
    - Set({bench::compiler/c_data_structures})
    - Set({bench::compiler/c_driver})
    - Set({bench::compiler/c_driver_impl})
    - Set({bench::compiler/c_error_codes})
    - Set({bench::compiler/c_error_messages})
    - Set({bench::compiler/c_errors})
    - Set({bench::compiler/c_expand})
    - Set({bench::compiler/c_feature})
    - Set({bench::compiler/c_fluent_macro})
    - Set({bench::compiler/c_fs_util})
    - Set({bench::compiler/c_graphviz})
    - Set({bench::compiler/c_hashes})
    - Set({bench::compiler/c_hir})
    - Set({bench::compiler/c_hir_analysis})
    - Set({bench::compiler/c_hir_id})
    - Set({bench::compiler/c_hir_pretty})
    - Set({bench::compiler/c_hir_typeck})
    - Set({bench::compiler/c_incremental})
    - Set({bench::compiler/c_index})
    - Set({bench::compiler/c_index_macros})
    - Set({bench::compiler/c_infer})
    - Set({bench::compiler/c_interface})
    - Set({bench::compiler/c_lexer})
    - Set({bench::compiler/c_lint})
    - Set({bench::compiler/c_lint_defs})
    - Set({bench::compiler/c_llvm})
    - Set({bench::compiler/c_log})
    - Set({bench::compiler/c_macros})
    - Set({bench::compiler/c_metadata})
    - Set({bench::compiler/c_middle})
    - Set({bench::compiler/c_mir_build})
    - Set({bench::compiler/c_mir_dataflow})
    - Set({bench::compiler/c_mir_transform})
    - Set({bench::compiler/c_monomorphize})
    - Set({bench::compiler/c_next_trait_solver})
    - Set({bench::compiler/c_parse})
    - Set({bench::compiler/c_parse_format})
    - Set({bench::compiler/c_passes})
    - Set({bench::compiler/c_pattern_analysis})
    - Set({bench::compiler/c_privacy})
    - Set({bench::compiler/c_proc_macro})
    - Set({bench::compiler/c_public})
    - Set({bench::compiler/c_public_bridge})
    - Set({bench::compiler/c_query_impl})
    - Set({bench::compiler/c_query_system})
    - Set({bench::compiler/c_resolve})
    - Set({bench::compiler/c_sanitizers})
    - Set({bench::compiler/c_serialize})
    - Set({bench::compiler/c_session})
    - Set({bench::compiler/c_span})
    - Set({bench::compiler/c_symbol_mangling})
    - Set({bench::compiler/c_target})
    - Set({bench::compiler/c_thread_pool})
    - Set({bench::compiler/c_trait_selection})
    - Set({bench::compiler/c_traits})
    - Set({bench::compiler/c_transmute})
    - Set({bench::compiler/c_ty_utils})
    - Set({bench::compiler/c_type_ir})
    - Set({bench::compiler/c_type_ir_macros})
    - Set({bench::compiler/c_windows_rc})
[Bench] test::Cratedoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({bench::src/libdoc, bench::src/tools/doc})
