src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_compiler.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build compiler
---
[Build] compile::c
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler/c_abi})
    - Set({build::compiler/c_arena})
    - Set({build::compiler/c_ast})
    - Set({build::compiler/c_ast_ir})
    - Set({build::compiler/c_ast_lowering})
    - Set({build::compiler/c_ast_passes})
    - Set({build::compiler/c_ast_pretty})
    - Set({build::compiler/c_attr_parsing})
    - Set({build::compiler/c_baked_icu_data})
    - Set({build::compiler/c_borrowck})
    - Set({build::compiler/c_builtin_macros})
    - Set({build::compiler/c_codegen_llvm})
    - Set({build::compiler/c_codegen_ssa})
    - Set({build::compiler/c_const_eval})
    - Set({build::compiler/c_data_structures})
    - Set({build::compiler/c_driver})
    - Set({build::compiler/c_driver_impl})
    - Set({build::compiler/c_error_codes})
    - Set({build::compiler/c_error_messages})
    - Set({build::compiler/c_errors})
    - Set({build::compiler/c_expand})
    - Set({build::compiler/c_feature})
    - Set({build::compiler/c_fluent_macro})
    - Set({build::compiler/c_fs_util})
    - Set({build::compiler/c_graphviz})
    - Set({build::compiler/c_hashes})
    - Set({build::compiler/c_hir})
    - Set({build::compiler/c_hir_analysis})
    - Set({build::compiler/c_hir_id})
    - Set({build::compiler/c_hir_pretty})
    - Set({build::compiler/c_hir_typeck})
    - Set({build::compiler/c_incremental})
    - Set({build::compiler/c_index})
    - Set({build::compiler/c_index_macros})
    - Set({build::compiler/c_infer})
    - Set({build::compiler/c_interface})
    - Set({build::compiler/c_lexer})
    - Set({build::compiler/c_lint})
    - Set({build::compiler/c_lint_defs})
    - Set({build::compiler/c_llvm})
    - Set({build::compiler/c_log})
    - Set({build::compiler/c_macros})
    - Set({build::compiler/c_metadata})
    - Set({build::compiler/c_middle})
    - Set({build::compiler/c_mir_build})
    - Set({build::compiler/c_mir_dataflow})
    - Set({build::compiler/c_mir_transform})
    - Set({build::compiler/c_monomorphize})
    - Set({build::compiler/c_next_trait_solver})
    - Set({build::compiler/c_parse})
    - Set({build::compiler/c_parse_format})
    - Set({build::compiler/c_passes})
    - Set({build::compiler/c_pattern_analysis})
    - Set({build::compiler/c_privacy})
    - Set({build::compiler/c_proc_macro})
    - Set({build::compiler/c_public})
    - Set({build::compiler/c_public_bridge})
    - Set({build::compiler/c_query_impl})
    - Set({build::compiler/c_query_system})
    - Set({build::compiler/c_resolve})
    - Set({build::compiler/c_sanitizers})
    - Set({build::compiler/c_serialize})
    - Set({build::compiler/c_session})
    - Set({build::compiler/c_span})
    - Set({build::compiler/c_symbol_mangling})
    - Set({build::compiler/c_target})
    - Set({build::compiler/c_thread_pool})
    - Set({build::compiler/c_trait_selection})
    - Set({build::compiler/c_traits})
    - Set({build::compiler/c_transmute})
    - Set({build::compiler/c_ty_utils})
    - Set({build::compiler/c_type_ir})
    - Set({build::compiler/c_type_ir_macros})
    - Set({build::compiler/c_windows_rc})
[Build] compile::Assemble
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler})
    - Set({build::compiler/c})
