src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_compiler.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: check compiler
---
[Check] check::c
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::compiler})
    - Set({check::compiler/c})
    - Set({check::compiler/c_abi})
    - Set({check::compiler/c_arena})
    - Set({check::compiler/c_ast})
    - Set({check::compiler/c_ast_ir})
    - Set({check::compiler/c_ast_lowering})
    - Set({check::compiler/c_ast_passes})
    - Set({check::compiler/c_ast_pretty})
    - Set({check::compiler/c_attr_parsing})
    - Set({check::compiler/c_baked_icu_data})
    - Set({check::compiler/c_borrowck})
    - Set({check::compiler/c_builtin_macros})
    - Set({check::compiler/c_codegen_llvm})
    - Set({check::compiler/c_codegen_ssa})
    - Set({check::compiler/c_const_eval})
    - Set({check::compiler/c_data_structures})
    - Set({check::compiler/c_driver})
    - Set({check::compiler/c_driver_impl})
    - Set({check::compiler/c_error_codes})
    - Set({check::compiler/c_error_messages})
    - Set({check::compiler/c_errors})
    - Set({check::compiler/c_expand})
    - Set({check::compiler/c_feature})
    - Set({check::compiler/c_fluent_macro})
    - Set({check::compiler/c_fs_util})
    - Set({check::compiler/c_graphviz})
    - Set({check::compiler/c_hashes})
    - Set({check::compiler/c_hir})
    - Set({check::compiler/c_hir_analysis})
    - Set({check::compiler/c_hir_id})
    - Set({check::compiler/c_hir_pretty})
    - Set({check::compiler/c_hir_typeck})
    - Set({check::compiler/c_incremental})
    - Set({check::compiler/c_index})
    - Set({check::compiler/c_index_macros})
    - Set({check::compiler/c_infer})
    - Set({check::compiler/c_interface})
    - Set({check::compiler/c_lexer})
    - Set({check::compiler/c_lint})
    - Set({check::compiler/c_lint_defs})
    - Set({check::compiler/c_llvm})
    - Set({check::compiler/c_log})
    - Set({check::compiler/c_macros})
    - Set({check::compiler/c_metadata})
    - Set({check::compiler/c_middle})
    - Set({check::compiler/c_mir_build})
    - Set({check::compiler/c_mir_dataflow})
    - Set({check::compiler/c_mir_transform})
    - Set({check::compiler/c_monomorphize})
    - Set({check::compiler/c_next_trait_solver})
    - Set({check::compiler/c_parse})
    - Set({check::compiler/c_parse_format})
    - Set({check::compiler/c_passes})
    - Set({check::compiler/c_pattern_analysis})
    - Set({check::compiler/c_privacy})
    - Set({check::compiler/c_proc_macro})
    - Set({check::compiler/c_public})
    - Set({check::compiler/c_public_bridge})
    - Set({check::compiler/c_query_impl})
    - Set({check::compiler/c_query_system})
    - Set({check::compiler/c_resolve})
    - Set({check::compiler/c_sanitizers})
    - Set({check::compiler/c_serialize})
    - Set({check::compiler/c_session})
    - Set({check::compiler/c_span})
    - Set({check::compiler/c_symbol_mangling})
    - Set({check::compiler/c_target})
    - Set({check::compiler/c_thread_pool})
    - Set({check::compiler/c_trait_selection})
    - Set({check::compiler/c_traits})
    - Set({check::compiler/c_transmute})
    - Set({check::compiler/c_ty_utils})
    - Set({check::compiler/c_type_ir})
    - Set({check::compiler/c_type_ir_macros})
    - Set({check::compiler/c_windows_rc})
