src/bootstrap/src/core/builder/cli_paths/snapshots/x_clippy.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: clippy
---
[Clippy] clippy::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({clippy::library})
    - Set({clippy::library/alloc})
    - Set({clippy::library/compiler-builtins/compiler-builtins})
    - Set({clippy::library/core})
    - Set({clippy::library/panic_abort})
    - Set({clippy::library/panic_unwind})
    - Set({clippy::library/proc_macro})
    - Set({clippy::library/c-std-workspace-core})
    - Set({clippy::library/std})
    - Set({clippy::library/std_detect})
    - Set({clippy::library/sysroot})
    - Set({clippy::library/test})
    - Set({clippy::library/unwind})
[Clippy] clippy::c
    targets: [x86_64-unknown-linux-gnu]
    - Set({clippy::compiler})
    - Set({clippy::compiler/c})
    - Set({clippy::compiler/c_abi})
    - Set({clippy::compiler/c_arena})
    - Set({clippy::compiler/c_ast})
    - Set({clippy::compiler/c_ast_ir})
    - Set({clippy::compiler/c_ast_lowering})
    - Set({clippy::compiler/c_ast_passes})
    - Set({clippy::compiler/c_ast_pretty})
    - Set({clippy::compiler/c_attr_parsing})
    - Set({clippy::compiler/c_baked_icu_data})
    - Set({clippy::compiler/c_borrowck})
    - Set({clippy::compiler/c_builtin_macros})
    - Set({clippy::compiler/c_codegen_llvm})
    - Set({clippy::compiler/c_codegen_ssa})
    - Set({clippy::compiler/c_const_eval})
    - Set({clippy::compiler/c_data_structures})
    - Set({clippy::compiler/c_driver})
    - Set({clippy::compiler/c_driver_impl})
    - Set({clippy::compiler/c_error_codes})
    - Set({clippy::compiler/c_error_messages})
    - Set({clippy::compiler/c_errors})
    - Set({clippy::compiler/c_expand})
    - Set({clippy::compiler/c_feature})
    - Set({clippy::compiler/c_fluent_macro})
    - Set({clippy::compiler/c_fs_util})
    - Set({clippy::compiler/c_graphviz})
    - Set({clippy::compiler/c_hashes})
    - Set({clippy::compiler/c_hir})
    - Set({clippy::compiler/c_hir_analysis})
    - Set({clippy::compiler/c_hir_id})
    - Set({clippy::compiler/c_hir_pretty})
    - Set({clippy::compiler/c_hir_typeck})
    - Set({clippy::compiler/c_incremental})
    - Set({clippy::compiler/c_index})
    - Set({clippy::compiler/c_index_macros})
    - Set({clippy::compiler/c_infer})
    - Set({clippy::compiler/c_interface})
    - Set({clippy::compiler/c_lexer})
    - Set({clippy::compiler/c_lint})
    - Set({clippy::compiler/c_lint_defs})
    - Set({clippy::compiler/c_llvm})
    - Set({clippy::compiler/c_log})
    - Set({clippy::compiler/c_macros})
    - Set({clippy::compiler/c_metadata})
    - Set({clippy::compiler/c_middle})
    - Set({clippy::compiler/c_mir_build})
    - Set({clippy::compiler/c_mir_dataflow})
    - Set({clippy::compiler/c_mir_transform})
    - Set({clippy::compiler/c_monomorphize})
    - Set({clippy::compiler/c_next_trait_solver})
    - Set({clippy::compiler/c_parse})
    - Set({clippy::compiler/c_parse_format})
    - Set({clippy::compiler/c_passes})
    - Set({clippy::compiler/c_pattern_analysis})
    - Set({clippy::compiler/c_privacy})
    - Set({clippy::compiler/c_proc_macro})
    - Set({clippy::compiler/c_public})
    - Set({clippy::compiler/c_public_bridge})
    - Set({clippy::compiler/c_query_impl})
    - Set({clippy::compiler/c_query_system})
    - Set({clippy::compiler/c_resolve})
    - Set({clippy::compiler/c_sanitizers})
    - Set({clippy::compiler/c_serialize})
    - Set({clippy::compiler/c_session})
    - Set({clippy::compiler/c_span})
    - Set({clippy::compiler/c_symbol_mangling})
    - Set({clippy::compiler/c_target})
    - Set({clippy::compiler/c_thread_pool})
    - Set({clippy::compiler/c_trait_selection})
    - Set({clippy::compiler/c_traits})
    - Set({clippy::compiler/c_transmute})
    - Set({clippy::compiler/c_ty_utils})
    - Set({clippy::compiler/c_type_ir})
    - Set({clippy::compiler/c_type_ir_macros})
    - Set({clippy::compiler/c_windows_rc})
