src/bootstrap/src/core/builder/cli_paths/snapshots/x_dist.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: dist
---
[Dist] dist::Docs
    targets: [aarch64-unknown-linux-gnu]
    - Set({dist::-docs})
[Dist] dist::JsonDocs
    targets: [aarch64-unknown-linux-gnu]
    - Set({dist::-docs-json})
[Dist] dist::Mingw
    targets: [aarch64-unknown-linux-gnu]
    - Set({dist::-mingw})
[Dist] dist::c
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::c})
[Dist] dist::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({dist::-std})
[Dist] dist::cDev
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::c-dev})
[Dist] dist::Src
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::-src})
[Dist] dist::Dev
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::-dev})
[Dist] dist::PlainSourceTarball
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::c-src})
[Dist] dist::PlainSourceTarballGpl
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::c-src-gpl})
[Dist] dist::ReproducibleArtifacts
    targets: [x86_64-unknown-linux-gnu]
    - Set({dist::reproducible-artifacts})
