src/bootstrap/src/core/builder/cli_paths/snapshots/x_fix.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: fix
---
[Fix] check::c
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::compiler})
    - Set({fix::compiler/c})
    - Set({fix::compiler/c_abi})
    - Set({fix::compiler/c_arena})
    - Set({fix::compiler/c_ast})
    - Set({fix::compiler/c_ast_ir})
    - Set({fix::compiler/c_ast_lowering})
    - Set({fix::compiler/c_ast_passes})
    - Set({fix::compiler/c_ast_pretty})
    - Set({fix::compiler/c_attr_parsing})
    - Set({fix::compiler/c_baked_icu_data})
    - Set({fix::compiler/c_borrowck})
    - Set({fix::compiler/c_builtin_macros})
    - Set({fix::compiler/c_codegen_llvm})
    - Set({fix::compiler/c_codegen_ssa})
    - Set({fix::compiler/c_const_eval})
    - Set({fix::compiler/c_data_structures})
    - Set({fix::compiler/c_driver})
    - Set({fix::compiler/c_driver_impl})
    - Set({fix::compiler/c_error_codes})
    - Set({fix::compiler/c_error_messages})
    - Set({fix::compiler/c_errors})
    - Set({fix::compiler/c_expand})
    - Set({fix::compiler/c_feature})
    - Set({fix::compiler/c_fluent_macro})
    - Set({fix::compiler/c_fs_util})
    - Set({fix::compiler/c_graphviz})
    - Set({fix::compiler/c_hashes})
    - Set({fix::compiler/c_hir})
    - Set({fix::compiler/c_hir_analysis})
    - Set({fix::compiler/c_hir_id})
    - Set({fix::compiler/c_hir_pretty})
    - Set({fix::compiler/c_hir_typeck})
    - Set({fix::compiler/c_incremental})
    - Set({fix::compiler/c_index})
    - Set({fix::compiler/c_index_macros})
    - Set({fix::compiler/c_infer})
    - Set({fix::compiler/c_interface})
    - Set({fix::compiler/c_lexer})
    - Set({fix::compiler/c_lint})
    - Set({fix::compiler/c_lint_defs})
    - Set({fix::compiler/c_llvm})
    - Set({fix::compiler/c_log})
    - Set({fix::compiler/c_macros})
    - Set({fix::compiler/c_metadata})
    - Set({fix::compiler/c_middle})
    - Set({fix::compiler/c_mir_build})
    - Set({fix::compiler/c_mir_dataflow})
    - Set({fix::compiler/c_mir_transform})
    - Set({fix::compiler/c_monomorphize})
    - Set({fix::compiler/c_next_trait_solver})
    - Set({fix::compiler/c_parse})
    - Set({fix::compiler/c_parse_format})
    - Set({fix::compiler/c_passes})
    - Set({fix::compiler/c_pattern_analysis})
    - Set({fix::compiler/c_privacy})
    - Set({fix::compiler/c_proc_macro})
    - Set({fix::compiler/c_public})
    - Set({fix::compiler/c_public_bridge})
    - Set({fix::compiler/c_query_impl})
    - Set({fix::compiler/c_query_system})
    - Set({fix::compiler/c_resolve})
    - Set({fix::compiler/c_sanitizers})
    - Set({fix::compiler/c_serialize})
    - Set({fix::compiler/c_session})
    - Set({fix::compiler/c_span})
    - Set({fix::compiler/c_symbol_mangling})
    - Set({fix::compiler/c_target})
    - Set({fix::compiler/c_thread_pool})
    - Set({fix::compiler/c_trait_selection})
    - Set({fix::compiler/c_traits})
    - Set({fix::compiler/c_transmute})
    - Set({fix::compiler/c_ty_utils})
    - Set({fix::compiler/c_type_ir})
    - Set({fix::compiler/c_type_ir_macros})
    - Set({fix::compiler/c_windows_rc})
[Fix] check::doc
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/libdoc, fix::src/tools/doc})
[Fix] check::CraneliftCodegenBackend
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::cg_clif})
    - Set({fix::c_codegen_cranelift})
[Fix] check::GccCodegenBackend
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::cg_gcc})
    - Set({fix::c_codegen_gcc})
[Fix] check::Clippy
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/clippy})
[Fix] check::Miri
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/miri})
[Fix] check::CargoMiri
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/miri/cargo-miri})
[Fix] check::MiroptTestTools
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/miropt-test-tools})
[Fix] check::fmt
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/fmt})
[Fix] check::Analyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/-analyzer})
[Fix] check::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/test-float-parse})
[Fix] check::FeaturesStatusDump
    targets: [x86_64-unknown-linux-gnu]
    - Set({fix::src/tools/features-status-dump})
[Fix] check::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({fix::library})
    - Set({fix::library/alloc})
    - Set({fix::library/alloctests})
    - Set({fix::library/compiler-builtins/compiler-builtins})
    - Set({fix::library/core})
    - Set({fix::library/coretests})
    - Set({fix::library/panic_abort})
    - Set({fix::library/panic_unwind})
    - Set({fix::library/proc_macro})
    - Set({fix::library/c-std-workspace-core})
    - Set({fix::library/std})
    - Set({fix::library/std_detect})
    - Set({fix::library/sysroot})
    - Set({fix::library/test})
    - Set({fix::library/unwind})
